--- a/BackEnd/miroma/src/main/resources/application.properties
+++ b/BackEnd/miroma/src/main/resources/application.properties
@@ -34,3 +34,10 @@ spring.datasource.hikari.connection-timeout=20000
 jwt.secret=MiRomaSecretKey2025!ThisIsAVeryLongSecretKeyForJWTTokenGenerationAndValidation
 jwt.expiration=3600000
 jwt.refresh-expiration=604800000
+
+# Cookie Configuration
+# En desarrollo, usar Lax para permitir cookies en peticiones cross-origin
+# En producción, cambiar a Strict para mayor seguridad
+# En desarrollo con proxy, deshabilitar Secure temporalmente
+app.cookie.secure=false
+app.cookie.samesite=Lax
